🐛 Fix compiler errors